--- a/mnist_numbers.ipynb
+++ b/mnist_numbers.ipynb
@@ -44,7 +44,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a3cc3650-aa52-45f5-d02c-12e905cb5f80"
+        "outputId": "3f8871e2-a9cf-412d-e903-9377c21f112a"
       },
       "execution_count": null,
       "outputs": [
@@ -52,10 +52,10 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 9.91M/9.91M [00:01<00:00, 4.98MB/s]\n",
-            "100%|██████████| 28.9k/28.9k [00:00<00:00, 131kB/s]\n",
-            "100%|██████████| 1.65M/1.65M [00:01<00:00, 1.23MB/s]\n",
-            "100%|██████████| 4.54k/4.54k [00:00<00:00, 6.77MB/s]\n"
+            "100%|██████████| 9.91M/9.91M [00:00<00:00, 20.1MB/s]\n",
+            "100%|██████████| 28.9k/28.9k [00:00<00:00, 497kB/s]\n",
+            "100%|██████████| 1.65M/1.65M [00:00<00:00, 4.55MB/s]\n",
+            "100%|██████████| 4.54k/4.54k [00:00<00:00, 9.61MB/s]\n"
           ]
         }
       ]
@@ -70,7 +70,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hlnfyGUrz-7A",
-        "outputId": "214d483f-fb14-456b-cd71-50d9980ffc40"
+        "outputId": "fae791f6-b2cd-439b-8f3a-c9be91f3c8ab"
       },
       "execution_count": null,
       "outputs": [
@@ -105,7 +105,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n937fSAbz-3-",
-        "outputId": "137ef7b9-44fc-4f64-b61c-4d3ce6120690"
+        "outputId": "9daa8f18-712f-471c-85ed-c5226805564f"
       },
       "execution_count": null,
       "outputs": [
@@ -149,7 +149,7 @@
           "height": 428
         },
         "id": "TEgxlHOuz-xl",
-        "outputId": "b8536a35-d430-403e-aaee-11d21b03b8a5"
+        "outputId": "8bf99960-4a64-4a41-b907-b36625366fe7"
       },
       "execution_count": null,
       "outputs": [
@@ -180,10 +180,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 428
+          "height": 384
         },
         "id": "5g1rqCDfEIVv",
-        "outputId": "7eb27fcd-ebab-4524-88aa-67652c9cb2e5"
+        "outputId": "5e5c9bcb-dede-4bcc-9173-16da1113e352"
       },
       "execution_count": null,
       "outputs": [
@@ -249,7 +249,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5b425144-029e-4bb5-b395-2dbdfd73d878"
+        "outputId": "0b295e50-3c8b-42b8-8e70-f756ede42e29"
       },
       "execution_count": null,
       "outputs": [
@@ -261,7 +261,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 10
         }
       ]
     },
@@ -291,7 +291,7 @@
     {
       "cell_type": "code",
       "source": [
-        "for epoch in range(50):\n",
+        "for epoch in range(100):\n",
         "    model.train()\n",
         "    total_loss = 0\n",
         "    for x_batch, y_batch in train:\n",
@@ -311,7 +311,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a0804e1f-9a3a-42c0-8340-eed035e387ba"
+        "outputId": "d09af502-1e21-4bc4-e640-4bd7f07a0d17"
       },
       "execution_count": null,
       "outputs": [
@@ -319,56 +319,106 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Эпоха 1 -- Потери: 5.77\n",
-            "Эпоха 2 -- Потери: 6.63\n",
-            "Эпоха 3 -- Потери: 4.4\n",
-            "Эпоха 4 -- Потери: 7.94\n",
-            "Эпоха 5 -- Потери: 6.28\n",
-            "Эпоха 6 -- Потери: 4.18\n",
-            "Эпоха 7 -- Потери: 8.38\n",
-            "Эпоха 8 -- Потери: 5.56\n",
-            "Эпоха 9 -- Потери: 4.17\n",
-            "Эпоха 10 -- Потери: 8.03\n",
-            "Эпоха 11 -- Потери: 4.7\n",
-            "Эпоха 12 -- Потери: 5.23\n",
-            "Эпоха 13 -- Потери: 3.62\n",
-            "Эпоха 14 -- Потери: 4.58\n",
-            "Эпоха 15 -- Потери: 5.87\n",
-            "Эпоха 16 -- Потери: 1.67\n",
-            "Эпоха 17 -- Потери: 3.89\n",
-            "Эпоха 18 -- Потери: 4.86\n",
-            "Эпоха 19 -- Потери: 5.57\n",
-            "Эпоха 20 -- Потери: 4.43\n",
-            "Эпоха 21 -- Потери: 2.5\n",
-            "Эпоха 22 -- Потери: 6.04\n",
-            "Эпоха 23 -- Потери: 3.55\n",
-            "Эпоха 24 -- Потери: 5.24\n",
-            "Эпоха 25 -- Потери: 2.93\n",
-            "Эпоха 26 -- Потери: 3.71\n",
-            "Эпоха 27 -- Потери: 3.99\n",
-            "Эпоха 28 -- Потери: 3.62\n",
-            "Эпоха 29 -- Потери: 1.66\n",
-            "Эпоха 30 -- Потери: 5.75\n",
-            "Эпоха 31 -- Потери: 3.51\n",
-            "Эпоха 32 -- Потери: 3.85\n",
-            "Эпоха 33 -- Потери: 2.51\n",
-            "Эпоха 34 -- Потери: 0.7\n",
-            "Эпоха 35 -- Потери: 6.21\n",
-            "Эпоха 36 -- Потери: 5.09\n",
-            "Эпоха 37 -- Потери: 3.11\n",
-            "Эпоха 38 -- Потери: 2.57\n",
-            "Эпоха 39 -- Потери: 3.17\n",
-            "Эпоха 40 -- Потери: 2.3\n",
-            "Эпоха 41 -- Потери: 1.47\n",
-            "Эпоха 42 -- Потери: 5.5\n",
-            "Эпоха 43 -- Потери: 1.86\n",
-            "Эпоха 44 -- Потери: 3.77\n",
-            "Эпоха 45 -- Потери: 3.81\n",
-            "Эпоха 46 -- Потери: 1.96\n",
-            "Эпоха 47 -- Потери: 1.84\n",
-            "Эпоха 48 -- Потери: 3.86\n",
-            "Эпоха 49 -- Потери: 3.65\n",
-            "Эпоха 50 -- Потери: 0.66\n"
+            "Эпоха 1 -- Потери: 0.0\n",
+            "Эпоха 2 -- Потери: 0.0\n",
+            "Эпоха 3 -- Потери: 0.0\n",
+            "Эпоха 4 -- Потери: 0.0\n",
+            "Эпоха 5 -- Потери: 0.0\n",
+            "Эпоха 6 -- Потери: 7.16\n",
+            "Эпоха 7 -- Потери: 2.73\n",
+            "Эпоха 8 -- Потери: 1.75\n",
+            "Эпоха 9 -- Потери: 2.62\n",
+            "Эпоха 10 -- Потери: 2.66\n",
+            "Эпоха 11 -- Потери: 0.61\n",
+            "Эпоха 12 -- Потери: 0.01\n",
+            "Эпоха 13 -- Потери: 0.0\n",
+            "Эпоха 14 -- Потери: 0.0\n",
+            "Эпоха 15 -- Потери: 0.0\n",
+            "Эпоха 16 -- Потери: 0.0\n",
+            "Эпоха 17 -- Потери: 0.0\n",
+            "Эпоха 18 -- Потери: 0.0\n",
+            "Эпоха 19 -- Потери: 0.0\n",
+            "Эпоха 20 -- Потери: 0.0\n",
+            "Эпоха 21 -- Потери: 0.0\n",
+            "Эпоха 22 -- Потери: 0.0\n",
+            "Эпоха 23 -- Потери: 0.0\n",
+            "Эпоха 24 -- Потери: 0.0\n",
+            "Эпоха 25 -- Потери: 0.0\n",
+            "Эпоха 26 -- Потери: 0.0\n",
+            "Эпоха 27 -- Потери: 8.32\n",
+            "Эпоха 28 -- Потери: 2.56\n",
+            "Эпоха 29 -- Потери: 1.95\n",
+            "Эпоха 30 -- Потери: 2.31\n",
+            "Эпоха 31 -- Потери: 2.32\n",
+            "Эпоха 32 -- Потери: 2.66\n",
+            "Эпоха 33 -- Потери: 2.17\n",
+            "Эпоха 34 -- Потери: 2.55\n",
+            "Эпоха 35 -- Потери: 1.46\n",
+            "Эпоха 36 -- Потери: 0.74\n",
+            "Эпоха 37 -- Потери: 2.49\n",
+            "Эпоха 38 -- Потери: 2.98\n",
+            "Эпоха 39 -- Потери: 1.74\n",
+            "Эпоха 40 -- Потери: 2.4\n",
+            "Эпоха 41 -- Потери: 1.4\n",
+            "Эпоха 42 -- Потери: 1.03\n",
+            "Эпоха 43 -- Потери: 1.2\n",
+            "Эпоха 44 -- Потери: 0.83\n",
+            "Эпоха 45 -- Потери: 4.77\n",
+            "Эпоха 46 -- Потери: 1.21\n",
+            "Эпоха 47 -- Потери: 1.94\n",
+            "Эпоха 48 -- Потери: 0.44\n",
+            "Эпоха 49 -- Потери: 1.04\n",
+            "Эпоха 50 -- Потери: 2.12\n",
+            "Эпоха 51 -- Потери: 1.83\n",
+            "Эпоха 52 -- Потери: 1.42\n",
+            "Эпоха 53 -- Потери: 2.22\n",
+            "Эпоха 54 -- Потери: 2.47\n",
+            "Эпоха 55 -- Потери: 2.42\n",
+            "Эпоха 56 -- Потери: 0.68\n",
+            "Эпоха 57 -- Потери: 1.57\n",
+            "Эпоха 58 -- Потери: 2.76\n",
+            "Эпоха 59 -- Потери: 0.49\n",
+            "Эпоха 60 -- Потери: 2.89\n",
+            "Эпоха 61 -- Потери: 1.27\n",
+            "Эпоха 62 -- Потери: 1.75\n",
+            "Эпоха 63 -- Потери: 2.0\n",
+            "Эпоха 64 -- Потери: 1.5\n",
+            "Эпоха 65 -- Потери: 1.9\n",
+            "Эпоха 66 -- Потери: 2.18\n",
+            "Эпоха 67 -- Потери: 1.88\n",
+            "Эпоха 68 -- Потери: 0.91\n",
+            "Эпоха 69 -- Потери: 2.06\n",
+            "Эпоха 70 -- Потери: 0.84\n",
+            "Эпоха 71 -- Потери: 3.2\n",
+            "Эпоха 72 -- Потери: 1.33\n",
+            "Эпоха 73 -- Потери: 3.07\n",
+            "Эпоха 74 -- Потери: 2.18\n",
+            "Эпоха 75 -- Потери: 0.71\n",
+            "Эпоха 76 -- Потери: 3.43\n",
+            "Эпоха 77 -- Потери: 0.63\n",
+            "Эпоха 78 -- Потери: 0.08\n",
+            "Эпоха 79 -- Потери: 0.0\n",
+            "Эпоха 80 -- Потери: 0.0\n",
+            "Эпоха 81 -- Потери: 0.0\n",
+            "Эпоха 82 -- Потери: 0.0\n",
+            "Эпоха 83 -- Потери: 0.0\n",
+            "Эпоха 84 -- Потери: 0.0\n",
+            "Эпоха 85 -- Потери: 0.0\n",
+            "Эпоха 86 -- Потери: 0.0\n",
+            "Эпоха 87 -- Потери: 0.0\n",
+            "Эпоха 88 -- Потери: 0.0\n",
+            "Эпоха 89 -- Потери: 0.0\n",
+            "Эпоха 90 -- Потери: 0.0\n",
+            "Эпоха 91 -- Потери: 0.0\n",
+            "Эпоха 92 -- Потери: 0.0\n",
+            "Эпоха 93 -- Потери: 0.0\n",
+            "Эпоха 94 -- Потери: 3.63\n",
+            "Эпоха 95 -- Потери: 3.71\n",
+            "Эпоха 96 -- Потери: 1.06\n",
+            "Эпоха 97 -- Потери: 1.88\n",
+            "Эпоха 98 -- Потери: 0.84\n",
+            "Эпоха 99 -- Потери: 3.08\n",
+            "Эпоха 100 -- Потери: 2.51\n"
           ]
         }
       ]
@@ -396,7 +446,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8079a9dd-b190-4765-e61b-eb71ed624c99"
+        "outputId": "6ffd905c-ad2a-46a5-85c5-ab83a4122e6e"
       },
       "execution_count": null,
       "outputs": [
@@ -404,7 +454,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Точность модели на тестовых данных: 98.34%\n"
+            "Точность модели на тестовых данных: 98.61%\n"
           ]
         }
       ]
@@ -412,7 +462,7 @@
     {
       "cell_type": "code",
       "source": [
-        "torch.save(model.state_dict(), 'model.pth')"
+        "torch.save(model.state_dict(), 'mnist_numbers.pth')"
       ],
       "metadata": {
         "id": "qTJPf2f2owrd"
